--- a/src/Moq/Moq.csproj
+++ b/src/Moq/Moq.csproj
@@ -32,12 +32,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Castle.Core" Version="5.1.1" />
-		<PackageReference Include="IFluentInterface" Version="2.1.0" PrivateAssets="All" />
-		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="All" />
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-		<PackageReference Include="NuGetizer" Version="1.1.1" />
-		<PackageReference Include="TypeNameFormatter.Sources" Version="1.1.1" PrivateAssets="All" />
+		<PackageReference Include="TriMock" Version="6.7.11" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net462' Or '$(TargetFramework)' == 'netstandard2.0' ">
